Convertido para o Swagger
